# morningstar

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md
Dependencies/: Master.h
Dependencies/XDG_SH/: xdg-shell.c  xdg-shell.h
Documentation/: doc.txt
Program/: CMakeLists.txt
Program/Dependencies/: Master.h  STBI.h  Types.h  glad.h  khrplatform.h
Program/Dependencies/FND/: FindWayland.cmake
Program/Dependencies/GLAD/: glad.h  opengl.h
Program/Dependencies/STBI/: STBI.h
Program/Source/: Globals.c  Globals.h  Main.c  Session.c  Session.h
Program/Source/Diagnostic/: Time.c  Time.h
Program/Source/Input/: File.c  File.h  Hardware.c  Hardware.h  Keyboard.c  Keyboard.h  Mouse.c  Mouse.h
Program/Source/Memory/: Allocate.c  Allocate.h  Array.c  Array.h  Fill.c  Fill.h  Thread.c  Thread.h
Program/Source/Output/: Error.c  Error.h  Messages.c  Messages.h  System.c  System.h  Warning.c  Warning.h
Program/Source/Rendering/: Colors.c  Colors.h  Loop.c  Loop.h  SHM.c  SHM.h  Shader.c  Shader.h  System.c  System.h
Program/Source/Systems/: Globals.c  Globals.h  Session.c  Session.h  WaylandTypes.h
Program/Source/Systems/Application/: Client.c  Manager.c  Manager.h  Window.c  Window.h
Program/Source/Systems/Diagnostic/: Monitor.c  Monitor.h  Time.c
Program/Source/Systems/Input/: Hardware.c  Hardware.h  Keyboard.c  Mouse.c  Mouse.h  Terminal.c
Program/Source/Systems/Output/: Error.c  Messages.c
Program/Source/Systems/Rendering/: SHM.c  SHM.h  Surfaces.c  Surfaces.h
Program/Source/Systems/Windowing/: Client.c  Client.h  Manager.c  Manager.h  Registry.c  Registry.h  System.c  System.h  Types.h  Window.c  Window.h
Program/Source/Utilities/: Colors.h  Math.h  Memory.h  Utilities.c  WaylandTypes.h
Program/Source/Windowing/: Manager.c  Manager.h  System.c  System.h  Wayland.c  Wayland.h  Window.c  Window.h  Windowing-Types.h  Windowing.c  Windowing.h  XDG.c
Source/: Main.c
Source/Systems/: Error.c  Error.h  Globals.c  Globals.h
Source/Systems/Diagnostic/: Monitor.c  Monitor.h  Time.c  Time.h
Source/Systems/Input/: Hardware.h  Input.c  Input.h  Keyboard.c  Keyboard.h  Mouse.c  Mouse.h  Terminal.h
Source/Systems/Output/: Error.c  Error.h  Messages.c  Messages.h  System.c  System.h
Source/Systems/Wayland/: Client.c  Client.h  Input.c  Input.h  Manager.c  Manager.h  Monitor.h  Types.h  Window.c  Window.h
Source/Systems/Windowing/: Client.c  Manager.c  Manager.h  Types.h  Window.c  Window.h
Source/Utilities/: Colors.h  Macros.h  Math.h  SharedMemory.h  Utilities.c
